[gd_scene load_steps=8 format=2]

[ext_resource path="res://models/constructable/gate.obj" type="ArrayMesh" id=1]
[ext_resource path="res://Materials/invisible.tres" type="Material" id=2]
[ext_resource path="res://prefabs/Interactables/InteractableNoPreset.tscn" type="PackedScene" id=3]
[ext_resource path="res://Materials/basic_wood.tres" type="Material" id=4]
[ext_resource path="res://Scripts/Objects/Gate.gd" type="Script" id=5]
[ext_resource path="res://Scripts/Objects/Destructable.gd" type="Script" id=6]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.225804, 0.812024, 0.946637 )

[node name="Gate" type="Area"]
script = ExtResource( 5 )

[node name="gate" type="MeshInstance" parent="."]
transform = Transform( 0.801051, 0, 0, 0, 0.801051, 0, 0, 0, 0.801051, -0.160647, 0.831077, -1.20591 )
mesh = ExtResource( 1 )
material/0 = ExtResource( 4 )
material/1 = ExtResource( 2 )
material/2 = ExtResource( 2 )
material/3 = null
material/4 = null
material/5 = null
material/6 = ExtResource( 4 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1.66193, 0, 0, 0, 1.66193, 0, 0, 0, 1.66193, -0.16603, 0.903459, -0.0740753 )
shape = SubResource( 1 )

[node name="Solid" type="StaticBody" parent="."]
transform = Transform( 1.24075, 0, 0, 0, 1.24075, 0, 0, 0, 1.24075, 0.0178387, -0.0970702, -0.163616 )
script = ExtResource( 6 )
effect_scale = 0.5

[node name="CollisionShape2" type="CollisionShape" parent="Solid"]
transform = Transform( 1.2887, 0, 0, 0, 1.2887, 0, 0, 0, 1.2887, -0.148191, 0.806389, 0.0721663 )
shape = SubResource( 1 )

[node name="Interactable" parent="." instance=ExtResource( 3 )]
transform = Transform( 1.24075, 0, 0, 0, 1.24075, 0, 0, 0, 1.24075, 0.0178387, -0.0970702, -0.163616 )

[node name="CollisionShape3" type="CollisionShape" parent="Interactable"]
transform = Transform( 1.39801, 0, 0, 0, 1.39801, 0, 0, 0, 1.39801, -0.148191, 0.806389, 0.0721663 )
shape = SubResource( 1 )
[connection signal="area_entered" from="." to="." method="_on_Gate_area_entered"]
[connection signal="emit_deconstruct" from="Solid" to="." method="_on_Solid_emit_deconstruct"]
[connection signal="emit_prompt" from="Interactable" to="." method="_on_Interactable_emit_prompt"]
[connection signal="interaction" from="Interactable" to="." method="_on_Interactable_interaction"]
